adicionando pessoas na lista

--- a/src/app/lista-pessoa/lista-pessoa.component.html
+++ b/src/app/lista-pessoa/lista-pessoa.component.html
@@ -1,9 +1,11 @@
 <h2>Lista de Pessoas</h2>
+
+<button (click)="enviarPessoa()">Enviar pessoa</button>
+<input type="text" placeholder="Nome" [(ngModel)]="nome">
+<p>{{ nome }}</p>
+
 <ul>
   <li *ngFor="let pessoa of pessoas">
     {{ pessoa }}
   </li>
 </ul>
-
-<input type="text" placeholder="Nome" [(ngModel)]="nome">
-<p>{{ nome }}</p>
