trabalhando com formularios

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -42,3 +42,5 @@
 <hr>
 <app-input-output [menu]="desenvolvimento" (nomeClicado)="valorPassado($event)"></app-input-output>
 <p [hidden]="!valor">valor passado @output "{{ valor }}"</p>
+<hr>
+<app-formulario></app-formulario>
